--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -31,7 +31,4 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Magento
-        run: >-
-          docker-compose -f ${{ env.DOCKER_COMPOSE_FILE }} exec -T php-fpm
-          bash -c 'cd /var/www/html/m2 && sudo chown www-data: -R /var/www/html/m2 && ls -al && id
-          && php -f bin/magento setup:install --base-url=http://magento2.test/ --backend-frontname=admin --db-host=mysql --db-name=magento_performance_tests --db-user=root --db-password=123123q --admin-user=admin@example.com --admin-password=password1 --admin-email=admin@example.com --admin-firstname=firstname --admin-lastname=lastname'
+        uses: extdn/github-actions-m2/install-m2-from-mirror
