--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -31,4 +31,4 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Magento
-        uses: extdn/github-actions-m2/install-m2-from-mirror
+        uses: extdn/github-actions-m2/install-m2-from-mirror@master
