--- a/magento-e2e-tests/8.1/action.yml
+++ b/magento-e2e-tests/8.1/action.yml
@@ -34,7 +34,7 @@ inputs:
     default: '1'
 runs:
   using: 'docker'
-  image: './Dockerfile:8.1'
+  image: 'Dockerfile'
   env:
     MAGENTO_VERSION: ${{ inputs.ce_version }}
     PROJECT_NAME: ${{ inputs.project_name }}
